--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-audio-record": "^0.2.2",
     "react-native-paper": "^5.12.3",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
